tests/ui/inline-const/const-match-pat-generic.stderr
error[E0158]: constant pattern cannot depend on generic parameters
  --> $DIR/const-match-pat-generic.rs:7:9
   |
LL |         const { V } => {},
   |         ^^^^^^^^^^^ `const` depends on a generic parameter

error[E0158]: constant pattern cannot depend on generic parameters
  --> $DIR/const-match-pat-generic.rs:19:9
   |
LL |         const { f(V) } => {},
   |         ^^^^^^^^^^^^^^ `const` depends on a generic parameter

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0158`.
